test/lambda/negative/import_parse_error_driver.ls
import bad: .import_parse_error_bad

"DRIVER_" ++ "RAN"
